--- a/style.css
+++ b/style.css
@@ -18,10 +18,14 @@ body
 h1
 {
   font-family: 'Lily Script One', cursive;
-  font-size: 45px;
+  font-size: 50px;
   color: bisque;
   text-align: center;
-  margin: 10px;
+  margin: 15px;
+  
+  text-shadow: 0 0 6px bisque,
+  0 0 12px rgb(62, 5, 116),
+  0 0 30px rgb(62, 5, 116);
 }
 
 h1:hover
@@ -32,45 +36,65 @@ h1:hover
 
 #box
 {
-  background-color: bisque;
-  color: black;
+  border: 1px solid rgba(255, 228, 196);
+  color: bisque;
   font-weight: bold;
   font-family: 'Josefin Sans', sans-serif;
   font-size: 20px;
-  width: 1200px;
-  height: 900px;
-  border-radius: 10px;
-  box-shadow: bisque  6px 6px 6px 6px;
-  
+  width: 90%;
+  height: 100vh;
+  border-radius: 5px;
+  box-shadow: 0 0 6px bisque,
+  0 0 12px rgb(62, 5, 116),
+  0 0 30px rgb(62, 5, 116);
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
 }
 
-#form
+section
 {
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 600px;
+  height: 600px;
+  margin: 10px 20px;
+}
+
+form
+{
+  display: flex;
   align-items: center;
-  margin-top: 45px;
-  width: 1200px;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  height: 90px;
+  width: 450px;
   
 }
 
-#data
+#inputData
 {
   font-family: 'Josefin Sans', sans-serif;
   border-color: bisque;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
 }
 
 #buscar
 {
-  background-color: black;
-  border-radius: 10px;
-  border-color: black;
+  background-color: transparent;
+  border: 1px solid rgba(255, 228, 196);
+  border-radius: 5px;
+  box-shadow: 0 0 6px bisque,
+  0 0 12px rgb(62, 5, 116),
+  0 0 30px rgb(62, 5, 116);
   color: bisque;
   cursor: pointer;
   font-family: 'Josefin Sans', sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
   padding: 5px;
 }
@@ -84,25 +108,104 @@ h1:hover
 #infoResultado
 {
   text-align: center;
-  margin: 20px 30px;
-}
-
-#resultado
-{
-  margin-top: 30px;
+  width: 500px;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
+}
+
+#midia
+{
+  max-height: 1000vh;
+  height: 100%;
+  margin: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
+}
+
+img
+{
+  width: 100%;
+  max-height: 90vh;
+  border-radius: 10px;
+  box-shadow: black 0px 0px 6px;
+  animation: animacao 2.5s;
   
+}
+figcaption
+{
+  text-align: center;
+  animation: animacao 2.5s;
 }
 
 iframe
 {
-  width: 600px;
+  width: 550px;
   height: 400px;
+  border-radius: 10px;
+  box-shadow: black 0px 0px 6px;
+  animation: animacao 2.5s;
+}
+
+@keyframes animacao {
+  0% {
+    opacity: 0;
+    transform: translateX(600px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 footer
 {
   margin-top: 30px;
+  color: bisque;
+  text-align: center;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+footer>a
+{
+  text-decoration: none;
+  color: bisque;
+}
+
+/*parte mobile*/
+
+@media (max-width:700px)
+{
+  #box
+  {
+    flex-direction: column;
+    height: 200vh;
+  }
+  section
+  {
+    width: auto;
+    height: auto;
+  }
+  
+  form
+  {
+    width: 100%;
+    height:160px;
+    margin-top: 5px;
+    justify-content: center;
+  }
+  
+  #infoResultado
+  {
+    width: 97%
+  }
+  
+  iframe
+  {
+    width: auto;
+    height: auto;
+  }
 }
