--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
 }
 
 h1
@@ -60,7 +61,7 @@ section
   flex-direction: column;
   justify-content: space-around;
   width: 600px;
-  height: 600px;
+  height: 100%;
   margin: 10px 20px;
 }
 
@@ -71,7 +72,8 @@ form
   flex-wrap: wrap;
   justify-content: space-evenly;
   height: 90px;
-  width: 450px;
+  width: 500px;
+  margin-top: 20px;
   
 }
 
@@ -182,12 +184,12 @@ footer>a
   #box
   {
     flex-direction: column;
-    height: 200vh;
+    height: 250vh;
   }
   section
   {
     width: auto;
-    height: auto;
+    
   }
   
   form
